---
title: Category
---
classDiagram
    direction LR

    class Category {
        -Group group
        -Collection~Product~ products
        -Collection~Task~ tasks
        +getGroup() Group
        +setGroup(Group)
        +addProduct(Product)
        +removeProduct(Product)
        +getProducts() Collection~Product~
        +addTask(Task)
        +removeTask(Task)
        +getTasks() Collection~Task~
    }

    class AbstractEntity {
        <<Abstract>>
    }

    class AbstractCodeEntity {
        <<Abstract>>
    }

    class EntityInterface {
        <<Interface>>
    }

    EntityInterface <|.. AbstractEntity
    AbstractCodeEntity <|-- Category
    AbstractEntity <|-- AbstractCodeEntity

    Group "0" --> "*" Category
    Category "0" --> "*" Product
    Category "0" --> "*" Task

    click EntityInterface call nodeCallback()
    click AbstractEntity call nodeCallback()
    click AbstractCodeEntity call nodeCallback()
    click Group call nodeCallback()
    click Product call nodeCallback()
    click Task call nodeCallback()
